# ItScoutTestTask

./: .dockerignore  .flake8  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py  asgi.py  celery_module.py  settings.py  urls.py  wsgi.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: celery-dashboard.yml
monitoring/grafana/dashboards_json/: celery.json
photo_service/: api_urls.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
photo_service/migrations/: 0001_initial.py
templates/upload/: home.html
tests/: test_views.py
